2005-01-24  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-chooser.c: Use GtkExpander to hide advanced options.
	* configure.in: Change version number to begin new release cycle
	* src/gtkam-save.c, src/gtkam-save.h: Migrated to GtkFileChooser

2005-01-22  Patrick Mansfield <patmans@users.sourceforge.net>

	* src/gtkam-debug.c: Fix so you can actually save the debug
	  output.

2005-01-22  Patrick Mansfield <patmans@users.sourceforge.net>

	* src/gtkam-config.c: Restore and store camera config window size.

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Tadashi Jokagi.

	* po/hu.po: Translation thanks to Marton Nemeth.

2004-10-25  Marcus Meissner  <marcus@jet.franken.de>
	
	* po/no.po,nb.po,configure.in: Renamed no -> nb.po

2004-04-30  Marcus Meissner  <marcus@jet.franken.de>

	* src/gtkam-config.c: Fixed strict aliasing issues in code.

2004-04-27  Andrew Burton <adburton@users.sourceforge.net>

	* configure.in, help/C/gtkam.xml: Update version number
	for release.

2004-04-21  Andrew Burton <adburton@users.sourceforge.net>

	* src/util.c: Modified check for existence of file to
	use GLib command.

2004-04-18  Andrew Burton <adburton@users.sourceforge.net>

	* src/Makefile.am: Removed DEPRECATED flags.
	* src/gtkam-save.c: Patch to fix memory leak from Shotaro
	Kamio (skamio6@users.sourceforge.net).

2004-04-16  Andrew Burton <adburton@users.sourceforge.net>

	* src/configure.in: Changed so --without-bonobo flag
	works.
	* src/gtkam-save.c: Abort save if an error occurs while
	saving. Spawn single instance of external program, not
	one for each file.

2004-04-13  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-delete.c, src/gtkam-delete.h: Change to use
	GtkDialog layout, to fit with Gnome HIG.
	* src/gtkam-exif.c: Hack to work around failure to retrieve
	EXIF data properly in the library.
	
2004-02-15  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-save.c: Fix compile errors.
