@@ -1,3 +1,8 @@
+2005-01-27  Andrew Burton <adburton@users.sourceforge.net>
+
+	* src/gtkam-save.c: Don't insert 'photo' if no prefix is entered,
+	  warn user if nothing is to be saved.
+
 2005-01-24  Andrew Burton <adburton@users.sourceforge.net>
 
 	* src/gtkam-chooser.c: Use GtkExpander to hide advanced options.
